[project]
name = "ultralm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.0",
    "langchain-mongodb>=0.5.0",
    "langchain-qdrant>=0.2.0",
    "langchain-unstructured>=0.1.6",
    "pymongo>=4.11.2",
    "python-magic>=0.4.27",
    "streamlit>=1.43.2",
    "streamlit-extras>=0.6.0",
    "unstructured-client>=0.31.1",
    "unstructured[all-docs,pdf]>=0.17.0",
    "langchain-groq>=0.2.5",
    "langchain-openai>=0.3.9",
    "streamlit-antd-components>=0.3.2",
    "pydantic>=2.10.6",
    "pip>=25.0.1",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.19",
    "mongoengine>=0.29.1",
    "beanie>=1.29.0",
]
